Fixed Bug #25329 sqlite_create_function with method and reference to $this